# tree-sitter-vba

./: .gitignore  Cargo.toml  README.md  grammar.js  package.json  tree-sitter.json
examples/: BorrowingBase.bas  KeyboardShortcuts.bas  ThisWorkbook.cls  Utilities.bas
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  control_flow.txt  declarations.txt  error_handling.txt  literals.txt  procedures.txt
