[package]
name = "tree-sitter-vba"
version = "0.1.0"
description = "Tree-sitter grammar for Visual Basic for Applications (VBA)"
license = "MIT"
edition = "2021"
build = "bindings/rust/build.rs"
keywords = ["tree-sitter", "parser", "vba"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25"
